fix modal z-index

--- a/claim-gui/src/components/VestingChart/ChartHelp/style.module.css
+++ b/claim-gui/src/components/VestingChart/ChartHelp/style.module.css
@@ -3,7 +3,7 @@
   top: -18px;
   right: -215px;
   width: 250px;
-  z-index: 1000;
+  z-index: 400;
 }
 
 .container .info {
